--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AndroidEResraurant"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
-        <activity
-            android:name=".DetailsActivity"
-            android:exported="false"
-            android:label="@string/title_activity_details"
-            android:theme="@style/Theme.AndroidEResraurant" />
         <activity
             android:name=".CategoryActivity"
             android:exported="false"
